<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="me.darkb.HikingApp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_trails"
        android:name="me.darkb.HikingApp.ui.trails.TrailsFragment"
        android:label="@string/title_trails"
        tools:layout="@layout/fragment_trails" />

    <fragment
        android:id="@+id/navigation_target"
        android:name="me.darkb.HikingApp.ui.target.TargetFragment"
        android:label="@string/title_target"
        tools:layout="@layout/fragment_target" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="me.darkb.HikingApp.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
</navigation>