<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/view_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/image_2" />

        <TextView
            android:id="@+id/trail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Trail - where"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_img" />

        <TextView
            android:id="@+id/trail_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="A Part of ---- Trail"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trail_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trail_subtitle">

            <TextView
                android:id="@+id/trail_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:text="@string/trail_difficulty"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/trail_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingTop="4sp"
                android:layout_toEndOf="@id/trail_difficulty"
                android:numStars="5"
                android:progressTint="#FFCC01"
                android:rating="3.5"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:stepSize="0.5"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                app:layout_constraintBaseline_toBaselineOf="@id/trail_difficulty"
                app:layout_constraintStart_toStartOf="@+id/details_guideline" />

            <TextView
                android:id="@+id/trail_length"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_below="@id/trail_difficulty"
                android:layout_alignParentStart="true"
                android:paddingTop="8dp"
                android:text="@string/trail_length"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trail_difficulty" />

            <TextView
                android:id="@+id/trail_length_data"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_below="@id/trail_rating"
                android:layout_toEndOf="@id/trail_length"
                android:paddingTop="8dp"
                android:text="7.5km"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/trail_length"
                app:layout_constraintStart_toStartOf="@+id/details_guideline" />

            <TextView
                android:id="@+id/trail_duration"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@id/trail_length"
                android:layout_alignParentStart="true"
                android:paddingTop="8dp"
                android:text="@string/trail_duration"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trail_length" />

            <TextView
                android:id="@+id/trail_duration_data"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@id/trail_length_data"
                android:layout_toEndOf="@id/trail_duration"
                android:paddingTop="8dp"
                android:text="2 hours"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/trail_duration"
                app:layout_constraintStart_toStartOf="@+id/details_guideline" />

            <TextView
                android:id="@+id/trail_region"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_below="@id/trail_duration"
                android:layout_alignParentStart="true"
                android:paddingTop="8dp"
                android:text="@string/trail_region"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trail_duration" />

            <TextView
                android:id="@+id/trail_region_data"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_below="@id/trail_duration_data"
                android:layout_toEndOf="@id/trail_region"
                android:paddingTop="8dp"
                android:text="Hong Kong Island"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/trail_region"
                app:layout_constraintStart_toStartOf="@+id/details_guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/details_guideline"
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/get_there"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/get_there"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details" />

        <RelativeLayout
            android:id="@+id/start_point_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="#54F677"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_there">

            <TextView
                android:id="@+id/start_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:text="@string/start_point" />

            <TextView
                android:id="@+id/start_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/start_point"
                android:textSize="16sp"
                android:text='Take public transport to "Wan Chai Gap Road" bus stop. Pass Wan Chai Gap Park and walk along Aberdeen Reservoir Road for about 15 minutes to the start point.  New World First Bus (NWFB) routes - 15 and 15B' />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/end_point_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="#FF6464"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_point_layout">

            <TextView
                android:id="@+id/end_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:text="@string/end_point" />

            <TextView
                android:id="@+id/end_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/end_point"
                android:textSize="16sp"
                android:text="Take public transport from Wong Nai Chung Gap.  Citybus routes - 6, 41A and 76" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>