<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.weather.WeatherFragment">

        <ImageView
            android:id="@+id/warning_wheel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/warning_wheel"
            android:src="@drawable/warning_wheel"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_temp"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="28°C – 33°C"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/humid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/humid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_humid"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="76 – 87%"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/UV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp" />

        <TextView
            android:id="@+id/UV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_uv"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="12 (Extreme)"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/rain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humid" />

        <TextView
            android:id="@+id/rain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_rain"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="0mm"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/UV"
            app:layout_constraintBottom_toTopOf="@id/last_update" />

        <TextView
            android:id="@+id/last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Last Update Time: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@id/rain"
            app:layout_constraintBottom_toTopOf="@id/title_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="199dp" />

        <TextView
            android:id="@+id/title_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:drawableEnd="@drawable/ic_red_warning"
            android:drawablePadding="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_wWarning"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_update" />

        <ImageView
            android:id="@+id/warning_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_warning"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/warning_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="The Very Hot Weather Warning is now in force. The public should beware of heatstroke and drink more water."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warning_icon" />

        <TextView
            android:id="@+id/title_astro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:drawableEnd="@drawable/ic_planet"
            android:drawablePadding="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_astro"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/warning_info" />

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:drawableStart="@drawable/ic_sunrise"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="05:58"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/sunset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_astro" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/ic_sunset"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            android:text="18:59"
            app:layout_constraintBottom_toTopOf="@+id/moonrise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunrise" />

        <TextView
            android:id="@+id/moonrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/ic_moonrise"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            android:text="22:39"
            app:layout_constraintBottom_toTopOf="@+id/moonset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunset" />

        <TextView
            android:id="@+id/moonset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:drawableStart="@drawable/ic_moonset"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            android:text="10:32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moonrise" />

        <TextView
            android:id="@+id/moon_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Moon Phase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moonset" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>